# ballistic_rocket

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ballistic_rocket/modeling/: AbstractSolver.cpp  AbstractSolver.hpp  RK4Solver.cpp  RK4Solver.hpp
ballistic_rocket/system/: BR2DFlatEarth.cpp  BR2DFlatEarth.hpp  BR2DRoundEarth.cpp  BR2DRoundEarth.hpp  BR3DRoundEarth.cpp  BR3DRoundEarth.hpp  ISystem.hpp  Parameters.hpp
core/: Core.cpp  Core.hpp
datafiles/: formatter.py  launch_ini.txt  parameters.txt  table_t_m_p_tet_123-0.txt
datafiles/cx/: 1.txt  2.txt  warhead.txt
datafiles/timetable/: mass.txt  pitch_angle.txt  power.txt
global/: Constants.hpp  FunctionCreator.cpp  FunctionCreator.hpp  GlobalScope.cpp  GlobalScope.hpp
utils/: CMakeLists.txt  LinAlg.cpp  LinAlg.hpp  LinearInterpolatedFunction.cpp  LinearInterpolatedFunction.hpp  Vector.cpp  Vector.hpp  coordinates.cpp  coordinates.hpp
utils/Function/: CubicSplinesInterpolation.cpp  CubicSplinesInterpolation.hpp  Function.hpp  InterpolatedFunction.cpp  InterpolatedFunction.hpp
utils/Function/interpolation/: ConditionalInterpolation.hpp  ConditionalLinearInterpolation.cpp  ConditionalLinearInterpolation.hpp  CubicSplinesInterpolation.cpp  CubicSplinesInterpolation.hpp  InterpolatedFunction.hpp  LinearInterpolatedFunction.cpp  LinearInterpolatedFunction.hpp  LinearInterpolationWithDiscontinuties.cpp  (+1 more)
utils/file_input/: IFileInputter.hpp  ParametersInputter.cpp  ParametersInputter.hpp  filenames.hpp
visualize/: distanceToHeights.py  draw_2d.py  draw_3d.py  geoid.py  trajectory.py  visualize.py
(+4 files in other folders)
